--- a/caracteristicas.html
+++ b/caracteristicas.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SB Admin 2 - Dashboard</title>
+    <title>SEGURIDAD DE LA INFORMACIÓN</title>
 
     <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -41,10 +41,7 @@
 
             <!-- Sidebar - Brand -->
             <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
-                <div class="sidebar-brand-icon rotate-n-15">
-                    <i class="fas fa-laugh-wink"></i>
-                </div>
-                <div class="sidebar-brand-text mx-3">SB Admin <sup>2</sup></div>
+                <div class="sidebar-brand-text mx-3">SEGURIDAD DE LA INFORMACIÓN</div>
             </a>
 
             <!-- Divider -->
@@ -69,7 +66,6 @@
             <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
-                    <i class="fas fa-fw fa-cog"></i>
                     <span>Legislación Informática</span>
                 </a>
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
@@ -78,7 +74,7 @@
                         <a class="collapse-item" href="leyes.html">Leyes</a>
                         <a class="collapse-item" href="tramites.html">Trámites y requisitos</a>
                         <a class="collapse-item" href="proceso.html">Proceso de trámite</a>
-                        <a class="collapse-item" href="elaboracion.html">Proceso de elaboración de avisos de privacidad</a>
+                        <a class="collapse-item" href="elaboracion.html">Avisos de privacidad</a>
                     </div>
                 </div>
             </li>
@@ -86,7 +82,6 @@
             <!-- Nav Item - Utilities Collapse Menu -->
             <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities" aria-expanded="true" aria-controls="collapseUtilities">
-                    <i class="fas fa-fw fa-wrench"></i>
                     <span>Ética y delitos informática</span>
                 </a>
                 <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
@@ -105,7 +100,6 @@
             <!-- Nav Item - Dashboard -->
             <li class="nav-item active">
                 <a class="nav-link" href="conclusiones.html">
-                    <i class=""></i>
                     <span>Conclusiones</span></a>
             </li>
 
