--- a/definiciones.html
+++ b/definiciones.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SB Admin 2 - Dashboard</title>
+    <title>SEGURIDAD DE LA INFORMACIÓN</title>
 
     <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -37,10 +37,7 @@
 
             <!-- Sidebar - Brand -->
             <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
-                <div class="sidebar-brand-icon rotate-n-15">
-                    <i class="fas fa-laugh-wink"></i>
-                </div>
-                <div class="sidebar-brand-text mx-3">SB Admin <sup>2</sup></div>
+                <div class="sidebar-brand-text mx-3">SEGURIDAD DE LA INFORMACIÓN</div>
             </a>
 
             <!-- Divider -->
@@ -49,8 +46,9 @@
             <!-- Nav Item - Dashboard -->
             <li class="nav-item active">
                 <a class="nav-link" href="index.html">
-                    <i class=""></i>
-                    <span>Portada</span></a>
+                    <i class="fas fa-tachometer-alt"></i>
+                    <span>Portada</span>
+                </a>
             </li>
 
             <!-- Divider -->
@@ -63,9 +61,7 @@
 
             <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
-                    aria-expanded="true" aria-controls="collapseTwo">
-                    <i class="fas fa-fw fa-cog"></i>
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
                     <span>Legislación Informática</span>
                 </a>
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
@@ -73,20 +69,18 @@
                         <a class="collapse-item" href="conceptos.html">Conceptos</a>
                         <a class="collapse-item" href="leyes.html">Leyes</a>
                         <a class="collapse-item" href="tramites.html">Trámites y requisitos</a>
-                        <a class="collapse-item" href="tramites.html">Proceso de trámite</a>
+                        <a class="collapse-item" href="proceso.html">Proceso de trámite</a>
+                        <a class="collapse-item" href="elaboracion.html">Avisos de privacidad</a>
                     </div>
                 </div>
             </li>
 
             <!-- Nav Item - Utilities Collapse Menu -->
             <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
-                    aria-expanded="true" aria-controls="collapseUtilities">
-                    <i class="fas fa-fw fa-wrench"></i>
-                    <span>Ética y delitos informática</span>
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities" aria-expanded="true" aria-controls="collapseUtilities">
+                        <span>Ética y delitos informática</span>
                 </a>
-                <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
-                    data-parent="#accordionSidebar">
+                <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <a class="collapse-item" href="definiciones.html">Conceptos</a>
                         <a class="collapse-item" href="caracteristicas.html">Características</a>
@@ -157,7 +151,7 @@
                                         <img class="img-fluid px-3 px-sm-4 mt-3 mb-4" style="width: 25rem; height: 14.5rem;"
                                             src="img/etica-informatica.svg" alt="...">
                                     </div>
-                                    <p>LLa ética informática se refiere a los principios morales y normas de conducta que guían el uso adecuado de la tecnología y la información digital. 
+                                    <p>La ética informática se refiere a los principios morales y normas de conducta que guían el uso adecuado de la tecnología y la información digital. 
                                         Involucra consideraciones sobre la privacidad, la seguridad de la información, el acceso equitativo a la tecnología, y el impacto social y ético de 
                                         las innovaciones tecnológicas.</p>
                                 </div>
