--- a/conclusiones.html
+++ b/conclusiones.html
@@ -160,7 +160,7 @@
 
                                     <!-- Image -->
                                     <div class="text-center">
-                                        <img class="img-fluid px-3 px-sm-4 mt-3 mb-4" style="width: 30rem; height: auto;" src="img/resumen-conclusiones.JPG" alt="Resumen y Conclusiones">
+                                        <img class="img-fluid px-3 px-sm-4 mt-3 mb-4" style="width: 30rem; height: auto;" src="img/resumen-conclusiones.jpg" alt="Resumen y Conclusiones">
                                     </div>
 
                                     <h6 class="m-0 font-weight-bold text-primary">Fuentes</h6>
